# DEF-W9-01_SDD-YOLO

./: .gitignore  ASSETS.md  CLAUDE.md  Dockerfile.serve  NEXT_STEPS.md  PIPELINE_MAP.md  PRD.md  README.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
benchmarks/: paper_targets.json
configs/: debug.toml  default.toml  paper.toml
docs/: deployment_checklist.md  ros2_topics.md  training_report_template.md
papers/: 2603.25218.txt
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2-integration.md  PRD-07-production.md  README.md
scripts/: eval.py  export_onnx.py  infer.py  serve.py  train.py
src/sdd_yolo/: __init__.py  config.py  data.py  eval.py  export.py  infer.py  losses.py  ops.py  serve.py  train.py  visualize.py
src/sdd_yolo/models/: __init__.py  attention.py  blocks.py  head.py  model.py
src/sdd_yolo/ros2/: __init__.py  messages.py  node.py
tasks/: INDEX.md  PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0204.md  PRD-0205.md  PRD-0206.md  PRD-0301.md  PRD-0302.md  PRD-0303.md  PRD-0401.md  PRD-0402.md  PRD-0501.md  PRD-0502.md  PRD-0503.md  PRD-0601.md  PRD-0701.md  PRD-0702.md
tests/: test_api.py  test_config_and_data.py  test_inference_smoke.py  test_metrics.py  test_model_forward.py
